# docs/swagger.json
@@ -81,7 +81,7 @@
                     "0": {
                         "description": "成功",
                         "schema": {
-                            "$ref": "#/definitions/r.Response"
+                            "$ref": "#/definitions/response.BiResp"
                         }
                     },
                     "40002": {
@@ -286,6 +286,17 @@
                     "type": "string"
                 },
                 "userPassword": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.BiResp": {
+            "type": "object",
+            "properties": {
+                "genChart": {
+                    "type": "string"
+                },
+                "genResult": {
                     "type": "string"
                 }
             }
